--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,22 +5,15 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.20
-      - uses: golangci/golangci-lint-action@v3
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version: 1.20
-      - run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
   release:
     runs-on: ubuntu-latest
     needs: test
@@ -29,7 +22,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version: 1.20
       - uses: go-semantic-release/action@v1
