--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
           go-version: 1.20
       - name: Test
         run: go test -v ./...
+
   release:
     runs-on: ubuntu-latest
     needs: test
@@ -29,4 +30,4 @@ jobs:
         with:
           hooks: goreleaser
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
