--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,18 +5,23 @@ on:
   pull_request:
 
 jobs:
-  test:
+  build-test-lint:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: 1.20
-      - name: Build
-        run: go build -v ./...
 
-      - name: Test
-        run: go test -v ./...
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
+
 
   release:
     runs-on: ubuntu-latest
