--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,6 @@ jobs:
       - uses: go-semantic-release/action@v1
         with:
           hooks: goreleaser
+          force-bump-patch-version: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
