--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       run: go test -v ./...
 
 
-  release:
+  semver:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/main'
@@ -36,7 +36,20 @@ jobs:
           go-version: 1.20
       - uses: go-semantic-release/action@v1
         with:
-          hooks: goreleaser
           force-bump-patch-version: true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+  release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: github.ref == 'refs/tags/v*'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: 1.20
+      - uses: goreleaser/goreleaser-action@v2
+        with:
+          version: v1.2.3
