--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,13 @@
+# This is an example .goreleaser.yml file with some sensible defaults.
+# Make sure to check the documentation at https://goreleaser.com
+
+# The lines below are called `modelines`. See `:help modeline`
+# Feel free to remove those if you don't want/need to use them.
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+# vim: set ts=2 sw=2 tw=0 fo=cnqoj
+
+version: 2
+
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -13,20 +23,20 @@ builds:
 
 project_name: gokid
 
-archive:
-  format: tar.gz
-  # this name template makes the OS and Arch compatible with the results of `uname`.
-  name_template: >-
-    {{ .ProjectName }}_
-    {{- title .Os }}_
-    {{- if eq .Arch "amd64" }}x86_64
-    {{- else if eq .Arch "386" }}i386
-    {{- else }}{{ .Arch }}{{ end }}
-    {{- if .Arm }}v{{ .Arm }}{{ end }}
-  # use zip for windows archives
-  format_overrides:
-    - goos: windows
-      format: zip
+archives:
+  - format: tar.gz
+    # this name template makes the OS and Arch compatible with the results of `uname`.
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    # use zip for windows archives
+    format_overrides:
+      - goos: windows
+        format: zip
 
 changelog:
   sort: asc
@@ -37,7 +47,7 @@ changelog:
 
 brews:
   - name: gokid
-    repo:
+    repository:
       owner: martinbernstorff
       name: homebrew-tap
     homepage: "https://github.com/martinbernstorff/gokid"
