--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    # Only if not version tagged
+    if: github.ref == 'refs/heads/main' && github.event.ref != 'refs/tags/v*'
 
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +28,8 @@ jobs:
   semver:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    # Only if not version tagged
+    if: github.ref == 'refs/heads/main' && github.event.ref != 'refs/tags/v*'
     permissions:
       contents: write
     steps:
