--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    # Only if not version tagged
-    if: github.event.ref != 'refs/tags/v*'
 
     steps:
     - uses: actions/checkout@v3
@@ -28,8 +26,6 @@ jobs:
   semver:
     runs-on: ubuntu-latest
     needs: test
-    # Only if not version tagged
-    if: github.ref == 'refs/heads/main' && github.event.ref != 'refs/tags/v*'
     permissions:
       contents: write
     steps:
@@ -47,7 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: github.ref == 'refs/tags/v*'
+    # Only if version tagged
+    if: github.event.ref == '**/v**'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
