--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,15 +42,13 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: test
+    if: github.event.ref == 'refs/heads/main' && github.event.ref == '**/v**'
     permissions:
       contents: write
-    # Only if version tagged
-    if: github.event.ref == '**/v**'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
           go-version: 1.20
       - uses: goreleaser/goreleaser-action@v2
-        with:
-          version: v1.2.3
