--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
   semver:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event.ref == 'refs/heads/main' && github.event.ref != '**/v**'
+    if: github.event.ref == 'refs/heads/main'
     permissions:
       contents: write
     steps:
@@ -43,7 +43,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event.ref == 'refs/heads/main' && github.event.ref == '**/v**'
+    if: github.event.ref == 'refs/heads/main'
     permissions:
       contents: write
     steps:
