--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,3 +52,11 @@ jobs:
         with:
           go-version: 1.20
       - uses: goreleaser/goreleaser-action@v2
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          # 'latest', 'nightly', or a semver
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
