--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
 
   semver:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref != 'refs/tags/v*'
+    # if on main and not tagged
+    if: github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
     steps:
@@ -43,7 +43,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/tags/v*'
+    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
     steps:
