--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      uses: actions/setup-go@v5
 
     - name: Build
       run: go build -v ./...
@@ -49,6 +47,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      # WARNING! Setting the go version here causes the action to fail, # 
+      # since it gets a version that does not support ARM               #
       - uses: actions/setup-go@v5
       - uses: goreleaser/goreleaser-action@v6
         with:
