chore: update .goreleaser.yaml

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,10 +46,12 @@ changelog:
       - "^test:"
 
 brews:
-  - name: gk
+  - name: gokid
     repository:
       owner: martinbernstorff
       name: homebrew-tap
     homepage: "https://github.com/martinbernstorff/gokid"
     description: "A simple CLI to submit changes"
     license: "MIT"
+    install:
+      bin.install_symlink bin/"gokid" => "gk"
