chore: update .goreleaser.yaml

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -54,5 +54,6 @@ brews:
     description: "A simple CLI to submit changes"
     license: "MIT"
     install: |
+      bin.install "gk"
       bin.install_symlink bin/"gokid" => "gk"
       bin.install_symlink bin/"gk" => "gokid"
