--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,9 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "go",
-			"label": "go: test workspace",
-			"command": "test",
-			"args": [
-				"./..."
-			],
+			"type": "shell",
+			"label": "test",
+			"command": "./.vscode/approve.sh",
 			"problemMatcher": [
 				"$go"
 			],
@@ -15,7 +12,6 @@
 				"kind": "test",
 				"isDefault": true
 			},
-			"detail": "./.vscode/approve.sh"
 		}
 	]
 }
