chore: update approve.sh and tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,16 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"label": "test",
-			"command": "./.vscode/approve.sh",
+			"label": "test and approve",
+			"command": "${workspaceFolder}/.vscode/approve.sh",
 			"problemMatcher": [
 				"$go"
 			],
+			"presentation": {
+				"reveal": "always",
+				"panel": "shared",
+				"clear": true
+			},
 			"group": {
 				"kind": "test",
 				"isDefault": true
