--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,20 +2,21 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "go",
-			"label": "go: test workspace",
-			"command": "test",
-			"args": [
-				"./..."
-			],
+			"type": "shell",
+			"label": "test and approve",
+			"command": "${workspaceFolder}/.vscode/approve.sh",
 			"problemMatcher": [
 				"$go"
 			],
+			"presentation": {
+				"reveal": "always",
+				"panel": "shared",
+				"clear": true
+			},
 			"group": {
 				"kind": "test",
 				"isDefault": true
 			},
-			"detail": "cd /Users/mabe/Desktop/Git/gokid; go test ./..."
 		}
 	]
 }
