chore: update launch.json and tasks.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
                 "new",
             ],
             "env": {},
-            "showLog": true
+            "showLog": true,
+            "preLaunchTask": "integator"
         }
     ]
 }
