--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,19 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "shell",
 			"label": "integator",
+			"type": "shell",
 			"command": "integator tui",
 			"presentation": {
 				"reveal": "always",
 				"panel": "dedicated",
 				"clear": true
 			},
-			"problemMatcher": []
+			"isBackground": true,
+			"problemMatcher": [],
+			"runOptions": {
+      		  "runOn": "folderOpen"
+      		}
 		},
 		{
 			"type": "shell",
@@ -25,6 +29,6 @@
 				"kind": "build",
 				"isDefault": true
 			}
-		}
+		},
 	]
 }
