--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,21 +2,19 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "integator",
 			"type": "shell",
-			"label": "test and approve",
-			"command": "${workspaceFolder}/.vscode/approve.sh",
-			"problemMatcher": [
-				"$go"
-			],
+			"command": "integator tui",
 			"presentation": {
 				"reveal": "always",
-				"panel": "shared",
+				"panel": "dedicated",
 				"clear": true
 			},
-			"group": {
-				"kind": "test",
-				"isDefault": true
-			},
+			"isBackground": true,
+			"problemMatcher": [],
+			"runOptions": {
+      		  "runOn": "folderOpen"
+      		}
 		},
 		{
 			"type": "shell",
@@ -30,7 +28,7 @@
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-		}
+			}
+		},
 	]
 }
