--- a/integator.toml
+++ b/integator.toml
@@ -1,10 +1,11 @@
 [integator]
-fail_fast = true
 push_on_success = true
+evaluate_commits_in_parallel = true
 root_worktree_dir = "/Users/mabe/Git/gokid"
+
 [[integator.steps]]
 name = "T"
-cmd = "go test ./..."
+cmd = "go test ./... && sleep 10"
 max_staleness_seconds = 0
 
 [[integator.steps]]
