feat: add postmerge command (#120)
* feat: add postmerge command

* update merge_test.go, yolo.go and yolo_test.go

* chore: update integator.toml

--- a/integator.toml
+++ b/integator.toml
@@ -1,7 +1,8 @@
 [integator]
-fail_fast = true
 push_on_success = true
+evaluate_commits_in_parallel = true
 root_worktree_dir = "/Users/mabe/Git/gokid"
+
 [[integator.steps]]
 name = "T"
 cmd = "go test ./..."
